--- a/css/main.less
+++ b/css/main.less
@@ -67,158 +67,239 @@
 
 @tutoWidth: 40%;
 
-#ember-app {
-  display: inline-block;
-  color: @xebiaPink;
-  margin-left: @tutoWidth;
-  padding-left: 1%;
-  padding-right: 1%;
-  width: 100% - @tutoWidth - 6%;
-  * {
-    font-family: 'IM Fell French Canon', serif;
-  }
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 
-  header {
-    padding: 20px 20px;
-    border-bottom: solid 1px #DDD;
-    font-size: 250%;
+  font-family: 'lucida grande', 'Open Sans', tahoma, verdana, arial, sans-serif;
+  font-size: 12px;
+}
 
-    a {
-      color:@xebiaPink;
-    }
-  }
+header {
+  color: #AAA;
+  padding: 20px 20px;
+  border-bottom: solid 1px #DDD;
 
-  .top {
-    color: #AAA;
-    padding: 20px 20px;
-    border-bottom: solid 1px #DDD;
+  background-image: url("logo.png");;
+  background-size: 235px 50px;
+  background-repeat: no-repeat;
+  background-position: 5px center;
 
-    div {
-      margin-left: auto;
-      margin-right: auto;
-      position: relative;
-      box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.1);
-      border-radius: 13px;
-      background-clip: padding-box;
-      height: 26px;
-      width: 200px;
-      padding: 0 20px 0 28px;
-      background-color: #ebeff1;
-      line-height: 26px;
-      background-size: 15px 15px;
-      background-repeat: no-repeat;
-      background-position: 9px 50%;
-      background-image: url("search.png");
-
-    }
-
-    input {
-      background-color: #ebeff1;
-      color: #4b5c66;
-      border: none;
-      width: 100%;
-      outline: none;
-      margin: 0;
-      padding: 0;
-      font-size: 100%;
-    }
-  }
-
-  @navigationSize:130px;
-
-  #navigation {
-    width: @navigationSize;
-    padding: 20px 20px;
-    border: none;
+  a{
     float: left;
-    overflow: auto;
+  }
 
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  .search_clear {
+    display: block;
+    position: absolute;
+    top: 2px;
+    right: 3px;
+    width: 22px;
+    height: 22px;
+    cursor: pointer;
+    background-image: url("close.png");
+    background-size: 14px 14px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    opacity: 0.5;
+  }
 
-    div {
+  div {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 13px;
+    background-clip: padding-box;
+    height: 26px;
+    width: 200px;
+    padding: 0 20px 0 28px;
+    background-color: #ebeff1;
+    line-height: 26px;
+    background-size: 15px 15px;
+    background-repeat: no-repeat;
+    background-position: 9px 50%;
+    background-image: url("search.png");
+
+  }
+
+  div input {
+    background-color: #ebeff1;
+    color: #4b5c66;
+    border: none;
+    width: 100%;
+    outline: none;
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+  }
+}
+
+#ember-app{
+  right: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  overflow: scroll;
+  left: @tutoWidth;
+}
+
+#navigation {
+  width: 95px;
+  padding: 20px 20px;
+  border: none;
+  float: left;
+  overflow: auto;
+
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  div {
+    color: rgb(184, 195, 201);
+    font-size: 10px;
+    height: 10px;
+    line-height: 10px;
+    margin-bottom: 6px;
+    padding-bottom: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 0px;
+    text-transform: uppercase;
+  }
+
+  ul {
+    color: rgb(137, 148, 155);
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    color: rgb(75, 92, 102);
+    display: block;
+    font-size: 14px;
+    padding: 2px 5px 2px 10px;
+  }
+
+  label {
+    margin: 3px 0.5ex;
+  }
+}
+
+#content {
+  padding: 20px 20px;
+  margin-left: 95px;
+
+  table {
+
+    border-spacing: 0;
+
+    tr.selected td:nth-child(1):before, #content table tr.selected td:nth-child(1):after {
+      content: "";
+      position: absolute;
+      top: 9px;
+      width: 0;
+      height: 0;
+      display: block;
+
+      width: 0;
+      height: 0;
+    }
+
+    tr.selected td:nth-child(1):after {
+      right: 214px;
+
+      border-top: 10px solid transparent;
+      border-bottom: 10px solid transparent;
+      border-left: 10px solid rgba(127, 50, 111, 0.1);
+    }
+
+    tr.selected td:nth-child(1):before {
+      right: -416px;
+
+      border-top: 10px solid transparent;
+      border-bottom: 10px solid transparent;
+      border-right: 10px solid rgba(127, 50, 111, 0.1);
+    }
+
+    tr:nth-child(even) {
+      background: rgba(127, 50, 111, 0.1);
+
+      td:nth-child(1) {
+        display:inline-block; /* ff hack */
+        position: relative;
+      }
+    }
+
+    tr.selected:nth-child(even) td:nth-child(1):before {
+      border-right: 10px solid white;
+    }
+
+    tr.selected:nth-child(even) td:nth-child(1):after {
+      border-left: 10px solid white;
+    }
+
+    td {
+      color: #7f326f;
+      padding: 12px;
+    }
+
+    th {
       color: rgb(184, 195, 201);
       font-size: 10px;
-      height: 10px;
-      line-height: 10px;
-      margin-bottom: 6px;
-      padding-bottom: 0px;
-      padding-left: 5px;
-      padding-right: 5px;
-      padding-top: 0px;
+      font-weight: normal;
       text-transform: uppercase;
-    }
-
-    ul {
-      color: rgb(137, 148, 155);
-      margin: 0;
-      padding: 0;
-
-      li {
-        color: rgb(75, 92, 102);
-        display: block;
-        font-size: 14px;
-        padding: 2px 5px 2px 10px;
-      }
-    }
-
-    label {
-      margin: 3px 0.5ex;
+      padding: 0px 8px 10px 8px;
     }
   }
+}
 
-  #content {
-    margin-left: @navigationSize + 20px;
-    padding: 20px 20px;
 
-    table {
-      border-spacing: 0;
+#detail {
+  margin: 50px 30px 0 888px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  background: rgba(127, 50, 111, 0.1);
+  min-height: 150px;
+  text-align: center;
 
-      th {
-        color: rgb(184, 195, 201);
-        font-size: 10px;
-        font-weight: normal;
-        text-transform: uppercase;
-        padding: 0px 8px 10px 8px;
-      }
-
-      tr:nth-child(even) {
-        background: rgba(127, 50, 111, 0.1);
-      }
-
-      td {
-        color: #7f326f;
-        padding: 12px;
-
-        &:nth-child(1) {
-          width: 300px;
-        }
-
-        &:nth-child(2), &:nth-child(3), &:nth-child(4), &:nth-child(5) {
-          width: 80px;
-          text-align: center;
-        }
-
-      }
-    }
+  h1 {
+    margin-top: 40px;
   }
 
-  input[type="search"] {
-    -webkit-appearance: textfield;
+  .label {
+    display: inline-block;
+    margin: 0 10px;
+
+    border-radius: 3px;
+    padding: 4px 8px;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 14px;
+    color: #ffffff;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    white-space: nowrap;
+    vertical-align: baseline;
+    background-color: #999;
   }
 
-  input[type="search"]::-webkit-search-decoration,
-  input[type="search"]::-webkit-search-cancel-button,
-  input[type="search"]::-webkit-search-results-button,
-  input[type="search"]::-webkit-search-results-decoration  {
-    -webkit-appearance: none;
+  .empty {
+    margin-top: 62px;
+    color: #999;
   }
 
 }
+
+
+/*
+Tuto
+*/
 
 #tutorial {
   min-height: 100%;
@@ -320,32 +401,6 @@
     display: none;
   }
 
-}
-
-html, body {
-  padding: 0;
-  margin: 0;
-  width: 100%;
-}
-
-#ember-app {
-  right: 0;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  overflow: scroll;
-}
-
-@media screen and (max-width: 1024px) {
-  #tutorial {
-    display: block;
-    position: relative;
-    width: auto;
-  }
-
-  #ember-app {
-    margin: 2%;
-  }
 }
 
 .code {
