Add pointer on row

--- a/css/main.less
+++ b/css/main.less
@@ -231,6 +231,10 @@ header {
       border-left: 10px solid white;
     }
 
+    tr.ember-view{
+      cursor: pointer;
+    }
+
     td {
       color: #7f326f;
       padding: 12px;
