--- a/css/main.less
+++ b/css/main.less
@@ -65,17 +65,14 @@ body {
 
 header {
   color: #AAA;
-  padding: 20px 20px;
+  padding: 10px 20px;
   border-bottom: solid 1px #DDD;
 
-  background-image: url("logo.png");;
+
   background-size: 235px 50px;
   background-repeat: no-repeat;
   background-position: 5px center;
 
-  a{
-    float: left;
-  }
 
   .search_clear {
     display: block;
@@ -92,38 +89,9 @@ header {
     opacity: 0.5;
   }
 
-  div {
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.1);
-    border-radius: 13px;
-    background-clip: padding-box;
-    height: 26px;
-    width: 200px;
-    padding: 0 20px 0 28px;
-    background-color: #ebeff1;
-    line-height: 26px;
-    background-size: 15px 15px;
-    background-repeat: no-repeat;
-    background-position: 9px 50%;
-    background-image: url("search.png");
-
-  }
-
-  div input {
-    background-color: #ebeff1;
-    color: #4b5c66;
-    border: none;
-    width: 100%;
-    outline: none;
-    margin: 0;
-    padding: 0;
-    font-size: 100%;
-  }
 }
 
-#ember-app{
+#ember-app {
   right: 0;
   position: absolute;
   top: 0;
@@ -134,7 +102,7 @@ header {
 
 #navigation {
   width: 95px;
-  padding: 20px 20px;
+  padding: 10px 20px;
   border: none;
   float: left;
   overflow: auto;
@@ -217,7 +185,7 @@ header {
       background: rgba(127, 50, 111, 0.1);
 
       td:nth-child(1) {
-        display:inline-block; /* ff hack */
+        display: inline-block; /* ff hack */
         position: relative;
       }
     }
@@ -230,7 +198,7 @@ header {
       border-left: 10px solid white;
     }
 
-    tr.ember-view{
+    tr.ember-view {
       cursor: pointer;
     }
 
@@ -248,7 +216,6 @@ header {
     }
   }
 }
-
 
 #detail {
   margin: 50px 30px 0 888px;
@@ -285,7 +252,6 @@ header {
   }
 
 }
-
 
 /*
 Tuto
@@ -397,7 +363,7 @@ Tuto
   font-size: 11px;
 }
 
-#canvas{
+#canvas {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -411,7 +377,7 @@ Tuto
   display: block;
 }
 
-#gui{
+#gui {
   position: absolute;
   top: 0;
   right: 0;
@@ -419,7 +385,7 @@ Tuto
   z-index: 20;
 }
 
-.well{
+.well {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
@@ -433,7 +399,7 @@ Tuto
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 
-.btn{
+.btn {
   display: inline-block;
   padding: 4px 12px;
   margin-bottom: 0;
@@ -465,7 +431,7 @@ Tuto
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
-.btn-success{
+.btn-success {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #5bb75b;
@@ -479,4 +445,49 @@ Tuto
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff62c462', endColorstr='#ff51a351', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
+.top {
+  padding-top: 10px;
+
+  div {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 13px;
+    background-clip: padding-box;
+    height: 26px;
+    width: 200px;
+    padding: 0 20px 0 28px;
+    background-color: #ebeff1;
+    line-height: 26px;
+    background-size: 15px 15px;
+    background-repeat: no-repeat;
+    background-position: 9px 50%;
+    background-image: url("search.png");
+
+  }
+
+  div input {
+    background-color: #ebeff1;
+    color: #4b5c66;
+    border: none;
+    width: 100%;
+    outline: none;
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+  }
+
+  input[type="search"] {
+    -webkit-appearance: textfield;
+  }
+
+  input[type="search"]::-webkit-search-decoration,
+  input[type="search"]::-webkit-search-results-button,
+  input[type="search"]::-webkit-search-results-decoration {
+    -webkit-appearance: none;
+  }
+
 }
