Correction CSS pour la largeur du tableau

--- a/css/main.less
+++ b/css/main.less
@@ -100,6 +100,7 @@ header {
   left: @tutoWidth;
 }
 
+
 #navigation {
   width: 95px;
   padding: 10px 20px;
@@ -147,10 +148,10 @@ header {
 
 #content {
   padding: 20px 20px;
-  margin-left: 95px;
+  margin-left: 95px + 20px;
 
   table {
-
+    width:100%;
     border-spacing: 0;
 
     tr.selected td:nth-child(1):before, #content table tr.selected td:nth-child(1):after {
