--- a/css/main.less
+++ b/css/main.less
@@ -293,6 +293,25 @@ Tuto
     }
   }
 
+  code {
+    padding: 2px 4px;
+    color: #d14;
+    background-color: #f7f7f9;
+    border: 1px solid #e1e1e8;
+    white-space: nowrap;
+  }
+
+  a {
+    color: #0088cc;
+    text-decoration: none;
+    .transition(all 0.5s);
+
+    &:hover {
+      text-decoration: underline;
+      color: lighten(#0088cc, 25%);
+    }
+  }
+
   .steps {
 
     position: relative;
