--- a/css/main.less
+++ b/css/main.less
@@ -293,12 +293,18 @@ Tuto
     }
   }
 
-  .step-detail p code {
-    padding: 2px 4px;
-    color: #d14;
-    background-color: #f7f7f9;
-    border: 1px solid #e1e1e8;
-    white-space: nowrap;
+  .step-detail p {
+    code {
+      padding: 2px 4px;
+      color: #d14;
+      background-color: #f7f7f9;
+      border: 1px solid #e1e1e8;
+      white-space: nowrap;
+    }
+
+    a code {
+      text-decoration: underline;
+    }
   }
 
   a {
